Deployment/objects/Pet__c.object
<CustomObject>
    <fields>
        <fullName>Its_Today__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day when you have to play with Pet</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OwnerPerson</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Pets</relationshipLabel>
        <relationshipName>Pets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Birdy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>